fixed word wrap issues on home and edit pages

--- a/static/liststyle.css
+++ b/static/liststyle.css
@@ -1,3 +1,9 @@
 body{
     background-image: linear-gradient(to bottom right, red, yellow);
 }
+
+.ui_big_header{
+    font-weight: bold;
+    font-size: 22px;
+    word-break: break-all;
+}
