--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,10 @@
 body{
     background-image: linear-gradient(to bottom right, red, yellow);
 }
+/*Backgroung color*/
 
 
+/*Created card for each task*/
 .ui_segment{
     align-self: center;
     background-color: aliceblue;
@@ -12,10 +14,13 @@ body{
     margin-left: auto;
     margin-right: auto;
     border-radius: 5px;
+    margin-bottom: 1rem;
+    word-break: break-all; /*to keep all words inside of card provided*/
 }
 
+/*Create hover effect */
 .ui_segment:hover{
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2);
 }
 
 .uigraylabel{
@@ -28,8 +33,10 @@ body{
     text-align: center;
 }
 
+/*Center all buttons within cards*/
 .buttons{
     text-align: center;
+    padding-bottom: .75rem;
 }
 
 .field{
